unpackaged/main/default/objects/Product_Sale__c/Product_Sale__c.object-meta.xml
<CustomObject>
    <label>Product Sale</label>
    <nameField>
        <displayFormat>T {0000}</displayFormat>
        <label>Product Sale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>