unpackaged/main/default/objects/Product_Sale__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>text(Hospital__r.Country__c)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>