unpackaged/main/default/objects/Product_Sale__c/fields/Customer_PO__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO__c</fullName>
    <label>Customer PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>