unpackaged/main/default/objects/Product_Sale__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INV</fullName>
            </value>
            <value>
                <fullName>CRN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>