unpackaged/main/default/objects/Product_Sale__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales for this Distributor</relationshipLabel>
    <relationshipName>Product_Sales1</relationshipName>
    <type>Lookup</type>
</CustomField>