unpackaged/main/default/objects/Product_Sale__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Sales</relationshipLabel>
    <relationshipName>Product_Sale</relationshipName>
    <type>Lookup</type>
</CustomField>