unpackaged/main/default/objects/Product_Sale__c/fields/Invoice_Item_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item_Link__c</fullName>
    <externalId>true</externalId>
    <label>Invoice/Item Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>