unpackaged/main/default/objects/Product_Sale__c/fields/Invoiced_Value__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Value__c</fullName>
    <label>Invoiced Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>