unpackaged/main/default/objects/Product_Sale__c/fields/MTD_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>MTD_Yesterday__c</fullName>
    <formula>if( Transaction_Date__c = TODAY()-1,
Transaction_Date__c,
DATE(YEAR(Transaction_Date__c),MONTH(Transaction_Date__c),01))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTD / Yesterday</label>
    <type>Date</type>
</CustomField>