unpackaged/main/default/objects/Product_Sale__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>