unpackaged/main/default/objects/Product_Sale__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>text( Hospital__r.Sales_Region__c )</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>