unpackaged/main/default/objects/Product_Sale__c/fields/Report_Month__c.field-meta.xml
<CustomField>
    <fullName>Report_Month__c</fullName>
    <formula>date(Year(TODAY()),MONTH(Invoice_Date__c),Day(Invoice_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report_Month</label>
    <type>Date</type>
</CustomField>