unpackaged/main/default/objects/Product_Sale__c/fields/SalesRepID__c.field-meta.xml
<CustomField>
    <fullName>SalesRepID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesRepID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales by this Rep.</relationshipLabel>
    <relationshipName>Sales_by_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>