unpackaged/main/default/objects/Product_Sale__c/fields/Surgeon_old__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_old__c</fullName>
    <label>Surgeon_old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>