unpackaged/main/default/objects/Product_Sale__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Product Sales</relationshipLabel>
    <relationshipName>Product_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>