unpackaged/main/default/objects/Product_Sale__c/fields/Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Name__c</fullName>
    <label>Target Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>