unpackaged/main/default/objects/Product_Sale__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>