unpackaged/main/default/objects/Product_Sale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order_Quantity__c</columns>
    <columns>NAME</columns>
    <columns>Data_Type__c</columns>
    <columns>Hospital__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoiced_Quantity__c</columns>
    <columns>Invoiced_Value__c</columns>
    <columns>Invoice_No__c</columns>
    <columns>Product__c</columns>
    <columns>Sales_Order_Number__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Target__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>UK</value>
    </filters>
    <label>All</label>
</ListView>