unpackaged/main/default/objects/Product_Sale__c/listViews/created_todayt.listView-meta.xml
<ListView>
    <fullName>created_todayt</fullName>
    <columns>NAME</columns>
    <columns>Customer_PO__c</columns>
    <columns>Hospital__c</columns>
    <columns>Invoice_Item_Link__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>created today</label>
</ListView>